--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
             <div class="links"> 
                 <a href="home.html">Home</a>
                 <a href="login.html">login</a>
-                <a href="home.html#contact">Contact</a>
+                <a href="https://arjuncvinod.github.io/project/home.html#contact">Contact</a>
             </div>
             </nav>
         </div>
