--- a/login.html
+++ b/login.html
@@ -9,9 +9,9 @@
             <nav class="nav-bar">
             <span class="logo" >SVHSS</span>
             <div class="links"> 
-                <a href="home.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="login.html">login</a>
-                <a href="https://arjuncvinod.github.io/project/home.html#contact">Contact</a>
+                <a href="index.html#contact">Contact</a>
             </div>
             </nav>
         </div>
