--- a/student-list.html
+++ b/student-list.html
@@ -25,9 +25,11 @@
     <main id="main-container">
         <div class="student-container">
             <h1>STUDENTS</h1>
+            <p class="add-btn-container">
             <a href="student-registration.html">
-           <p class="add-btn-container"><button class="add-btn"><i class="fa-sharp fa-solid fa-plus"></i>&nbsp Add Student</button></p>
+                <button class="add-btn"><i class="fa-sharp fa-solid fa-plus"></i>&nbsp Add Student</button>
             </a>
+            </p>
             <div class="student-grid-container">
                 <div class="student-info">
                     <img src="student1.jpg" alt="student" class="student-img">
